objects/Unique_RFPs__c.object
<CustomObject>
    <fields>
        <fullName>RFP_Source__c</fullName>
        <label>RFP Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>Lanyon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Total_Room_Night__c</fullName>
        <label>RFP Total Room Night</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Type_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will be checked if RFP type changes</description>
        <label>RFP Type Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Type__c</fullName>
        <label>RFP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting Space Only</fullName>
                </value>
                <value>
                    <fullName>Restaurant RFP</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Request for Information</fullName>
                </value>
                <value>
                    <fullName>Sleeping Rooms Only</fullName>
                </value>
                <value>
                    <fullName>Meeting Space and Sleeping Rooms</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Special Events</fullName>
                </value>
                <value>
                    <fullName>Wedding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Unique_Send_Date__c</fullName>
        <label>RFP Unique Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Value__c</fullName>
        <formula>Case(RFP_Type__c, "Restaurant RFP", 50 *  Attendee_Count__c, "Sleeping Rooms Only", 140 * RFP_Total_Room_Night__c *1.35, "Meeting Space and Sleeping Rooms", (140 * RFP_Total_Room_Night__c *1.35)+(Attendee_Count__c *Event_Duration_of_Days__c*20) , 
"Meeting Space Only", 20 * Attendee_Count__c *Event_Duration_of_Days__c,0 )</formula>
        <label>RFP Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RFPs_Sent_Over_the_weekend__c</fullName>
        <formula>CASE(MOD( Original_Send_Date__c  - DATE(0001,1,1) , 7) , 0 , 'Saturday' , 1 , 'Sunday' , 2 , 'Monday' , 3 , 'Tuesday' , 4 , 'Wednesday' , 5 , 'Thursday' , 6 , 'Friday' , "RFP Not Sent")</formula>
        <label>RFP Sent Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Planner_Ac__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responded_RFPs__c</fullName>
        <description>No. of Responded RFPs for the Unique RFP</description>
        <label>Responded RFPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>RFP response due date</description>
        <label>Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Rate__c</fullName>
        <formula>IF(of_Suppliers_Selected__c=0,0,(Responded_RFPs__c / of_Suppliers_Selected__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sent_to_Region__c</fullName>
        <label>Sent to Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Australasia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Caribbean &amp; Bermuda</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Northern Europe</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Western Europe</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Budget__c</fullName>
        <label>Service Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sourcing_Window__c</fullName>
        <formula>TEXT(FLOOR((Event_Start_Date__c- Original_Send_Date__c)/365.2425)) &amp; " year(s) " &amp;

TEXT(FLOOR(MOD((Event_Start_Date__c- Original_Send_Date__c),365.2425)/30)) &amp; " month(s)" &amp; Text(Floor(MOD(Floor(MOD((Event_Start_Date__c- Original_Send_Date__c),365.2425)),30))) &amp; " day(s)"</formula>
        <label>Sourcing Window</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>RFP Declined</fullName>
                </value>
                <value>
                    <fullName>Booked Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Awarded By Planner</fullName>
                </value>
                <value>
                    <fullName>Proposal Received</fullName>
                </value>
                <value>
                    <fullName>Awarded by Hotel</fullName>
                </value>
                <value>
                    <fullName>Proposal Declined</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>RFP Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>Planner_Ac__r.Sub_Region__c</formula>
        <label>Sub-Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Credited_to__c</fullName>
        <description>Rfp credited to which team</description>
        <label>Team Credited to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sourcing</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Vertical__c</fullName>
        <label>Team/Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>CCP</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>International-New Org Team</fullName>
                </value>
                <value>
                    <fullName>International-Repeat Org Team</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Power Users</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Territory</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
                <value>
                    <fullName>US New Org Team</fullName>
                </value>
                <value>
                    <fullName>US New Org Team(PS/DS)</fullName>
                </value>
                <value>
                    <fullName>US PA PreSales</fullName>
                </value>
                <value>
                    <fullName>US Repeat Org Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_RFP_Type__c</fullName>
        <label>Test RFP Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <formula>Event_Start_Date__c  -  Original_Send_Date__c</formula>
        <label>Timeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <label>Total Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Workflow - delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>True_EV__c</fullName>
        <label>True EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>REPEAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnAudited_EV__c</fullName>
        <formula>CASE(RFP_Type__c, 
"Restaurant RFP", 
(Attendee_Count__c* 55), 
"Request for Information", 
(Attendee_Count__c* 50), 
"Service Provider",0, 
"Sleeping Rooms Only", 
(RFP_Total_Room_Night__c*ADR__c), 
"Meeting Space and Sleeping Rooms", 
( 
(RFP_Total_Room_Night__c*ADR__c) 
+ 
(Attendee_Count__c*Event_Duration_of_Days__c*55) 
), 
"Meeting Space Only", 
(Attendee_Count__c* Event_Duration_of_Days__c *55) 
,0)</formula>
        <label>UnAudited EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_RFP_18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique RFP 18 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_RFP_ID__c</fullName>
        <formula>Id</formula>
        <label>Unique RFP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Sent__c</fullName>
        <formula>Year(Original_Send_Date__c)</formula>
        <label>Year Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Days__c</fullName>
        <formula>If(ISNULL(Original_Send_Date__c),0,Today() - Original_Send_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days Passed after RFP sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Days_to_Decision_Date__c</fullName>
        <formula>Decision_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days to Decision Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Events_covered_under_the_RFP__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Events covered under the RFP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Meeting_Rooms_Needed__c</fullName>
        <label># of Meeting Rooms Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Months__c</fullName>
        <description>Difference in Send date &amp; Event start date</description>
        <formula>ROUND((Event_Start_Date__c   - Original_Send_Date__c) / 30,0)</formula>
        <label># of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Suppliers_Added_w_Suggested_D_Ad__c</fullName>
        <label># of Suppliers Added w/ Suggested/D + Ad</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Suppliers_Selected__c</fullName>
        <label># of Suppliers Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Unique RFPs</label>
    <nameField>
        <label>Unique RFPs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unique RFPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Allie_P_Decision_Date_Passed_Rfps</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Original_Send_Date__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decision_Date_Passed__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Allie Pandelidis</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Allie P - Decision Date Passed Rfps</label>
        <language>en_US</language>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittlynn_Decision_Date_Over_by_8_days</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>of_Days_to_Decision_Date__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Brittlynn Goddard</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Brittlynn - Decision Date Over by 8 days</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittlynn_G_Decision_Date_Passed_RFPs</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Decision_Date_Passed__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Brittlynn Goddard</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Brittlynn-Decision Date Passed RFPs</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittlynn_G_RFPs_Sent_over_the_Weekend</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFPs_Sent_Over_the_weekend__c</field>
            <operation>contains</operation>
            <value>Saturday,Sunday</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Brittlynn Goddard</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>of_Days__c</field>
            <operation>lessOrEqual</operation>
            <value>7</value>
        </filters>
        <label>Brittlynn-RFPs Sent over the Weekend</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittlynn_G_RFPs_sent_in_Last_2_Days</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFP_Sent_in_Last_2_Days__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Brittlynn Goddard</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Brittlynn - RFPs sent in Last 2 Days</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittlynn_Goddard_Awarded_RFPs</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awarded</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Brittlynn Goddard</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Brittlynn - Awarded RFPs</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittlynn_Goddard_Cancelled_RFPs</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Brittlynn Goddard</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Brittlynn -Cancelled RFPs</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittlynn_Goddard_Open_RFPs</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Brittlynn Goddard</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Brittlynn-Open RFPs</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brittlynn_Goddard_RFP_Sent_in_last_1_Day</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFP_Sent_in_Last_1_Day__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Brittlynn Goddard</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Brittlynn-RFP Sent in last 1 Day</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Erin_Dugan_Awarded_RFPs</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awarded</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>erin Dugan</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Erin Dugan - Awarded RFPs</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Erin_Dugan_Cancelled_RFPs</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Erin Dugan</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Erin Dugan-Cancelled RFPs</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Erin_Dugan_Decision_Date_Over_by_8_days</fullName>
        <columns>NAME</columns>
        <columns>RFP_Code__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Type__c</columns>
        <columns>Planner_Account_Number__c</columns>
        <columns>Planner_Ac__c</columns>
        <columns>Contact__c</columns>
        <columns>RFP_Category__c</columns>
        <columns>PA_Rep_Economic_Value__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Event_Duration_of_Days__c</columns>
        <columns>RFP_Total_Room_Night__c</columns>
        <columns>Original_Send_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>of_Days_to_Decision_Date__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <filters>
            <field>PA_Rep__c</field>
            <operation>equals</operation>
            <value>Erin Dugan</value>
        </filters>
        <filters>
            <field>Original_Send_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Erin Dugan-Decision Date Over by 8 days</label>
        <sharedTo>
            <role>ProductAdoptionUS</role>
        </sharedTo>
    </listViews>
</CustomObject>